--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
     <title>Object Oriented JavaScript</title>
 </head>
 <body>
-    <strong>Object Oriented JavaScript!!</strong>
+    <form id="form">
+        <label>Test field: <input type="text"></label>
+        <br><br>
+        <button type="reset">Reset form</button>
+      </form>
+      <p id="log"></p>
     <script src="main.js"></script>
 </body>
 </html>
